--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
     <meta name="keywords" content="">
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="./css/icomoon.css">
@@ -31,7 +31,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main">
 
     </main>
 
