--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <meta name="keywords" content="">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="./css/icomoon.css">
 
     <title>TrendStore | Store</title>
@@ -30,20 +31,20 @@
         </nav>
     </header>
 
-    <!-- <main class="main">
-        <section>
-            <div>
-                <div>
-                    <h4>Primer Slide</h4>
-                    <img src="./images/gallery/Imagen1.jpg" alt="1">
+    <main class="main">
+        <section class="container">
+            <div class="container__slide">
+                <div class="container__slide__img">
+                    <img id="slide-1" src="./images/gallery/Imagen1.jpg" alt="">
+                    <img id="slide-2" src="./images/gallery/Imagen2.jpg" alt="">
+                    <img id="slide-3" src="./images/gallery/Imagen3.png" alt="">
+                    <img id="slide-4" src="./images/gallery/Imagen4.jpg" alt="">
                 </div>
-                <div>
-                    <h4>Segundo Slide</h4>
-                    <img src="./images/gallery/Imagen2.jpg" alt="2">
-                </div>
-                <div>
-                    <h4>Tercer Slide</h4>
-                    <img src="./images/gallery/Imagen3.png" alt="3">
+                <div class="container__slide__nav">
+                    <a href="#slide-1"></a>
+                    <a href="#slide-2"></a>
+                    <a href="#slide-3"></a>
+                    <a href="#slide-4"></a>
                 </div>
             </div>
         </section>
@@ -86,24 +87,24 @@
                 </div>
             </figure>
         </section>
-    </main> -->
-<footer class="footer">
-    <div class="container">
-        <div class="footer__links">
-            <a href="index.html">Store</a>
-            <a href="about.html">About Us</a>
-            <a href="contact.html">Contact</a>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__links">
+                <a href="index.html">Store</a>
+                <a href="about.html">About Us</a>
+                <a href="contact.html">Contact</a>
+            </div>
+            <div class="footer__media">
+                <a href="https://twitter.com" target="_blank" class="icon-twitter"></a>
+                <a href="https://www.facebook.com" target="_blank" class="icon-facebook"></a>
+                <a href="https://www.instagram.com" target="_blank" class="icon-instagram"></a>
+            </div>
         </div>
-        <div class="footer__media">
-            <a href="https://twitter.com" target="_blank" class="icon-twitter"></a>
-            <a href="https://www.facebook.com" target="_blank" class="icon-facebook"></a>
-            <a href="https://www.instagram.com" target="_blank" class="icon-instagram"></a>
+        <div class="copyright">
+            <span>&copy;2023 Todos los derechos reservados.</span>
         </div>
-    </div>
-    <div class="copyright">
-        <span>&copy;2023 Todos los derechos reservados.</span>
-    </div>
-</footer>
+    </footer>
 
 
     <script src="./js/main.js"></script>
