--- a/about.html
+++ b/about.html
@@ -32,9 +32,85 @@
     </header>
 
     <main class="main">
+        <div class="--empty"></div>
+        <main class="main">
+            <section class="about-us">
+                <h2 class="about-us__title">About Us<span>.</span></h2>
+                <p class="about-us__description">
+                    TrendStore is a testament to our shared passion for technology and unwavering dedication over more
+                    than a decade. As
+                    entrepreneurial siblings, we've been on an incredible journey, building TrendStore from the ground
+                    up and turning it
+                    into what it is today. Our story began 11 years ago when we embarked on this exciting tech
+                    adventure.
+                </p>
+                <p class="about-us__description">
+                    From the very beginning, we focused on specializing in Apple products and cutting-edge devices. This
+                    strategic
+                    decision allowed us to hone our knowledge and expertise in the tech world. For over a decade, we've
+                    established
+                    strong relationships with renowned suppliers, enabling us to expand our catalog and offer our
+                    customers a wide
+                    variety of state-of-the-art electronic devices.
+                </p>
+                <p class="about-us__description">
+                    At TrendStore, our core values are transparency, passion, differentiation, quality, and
+                    responsibility. These values
+                    underpin every action we take and every interaction we have with our customers. We take pride in
+                    providing
+                    exceptional customer service, placing our customers' satisfaction at the forefront at all times.
+                    Every purchase at
+                    TrendStore is an opportunity to experience our dedication and commitment to excellence.
+                </p>
+                <p class="about-us__description">
+                    As we move forward into the future, our mission is centered on inspiring trust and empathy in our
+                    customers. We aim
+                    to be much more than just a store; we want to be a place where people from around the world can
+                    discover, explore,
+                    and acquire innovative tech products with complete security and peace of mind. At TrendStore, we
+                    don't just sell
+                    products; we create unique and lasting experiences. Our vision is to be industry leaders in the tech
+                    world,
+                    maintaining our passion for innovation and quality as our constant driving force.
+                </p>
+            </section>
+            <section class="find-us">
+                <h2 class="find-us__title">Where to Find Us<span>.</span></h2>
+                <p class="find-us__description">
+                    TrendStore is conveniently located in the heart of the city, making it easily accessible to our
+                    customers. Our
+                    store is situated at [Address], [City], [Country], and is a tech enthusiast's haven. We've carefully
+                    designed
+                    our store to provide a unique shopping experience, allowing you to explore and interact with the
+                    latest tech
+                    gadgets and Apple products in person.
+                </p>
+                <p class="find-us__description">
+                    Our friendly and knowledgeable staff is always ready to assist you, answer your questions, and guide
+                    you through
+                    our extensive product selection. Whether you're looking for the latest iPhone, Macbook, or any other
+                    tech
+                    gadget, TrendStore is your one-stop destination for cutting-edge technology and top-notch customer
+                    service.
+                </p>
+                <p class="find-us__description">
+                    To find us, you can use the map below or contact our customer service for detailed directions. We
+                    look forward
+                    to welcoming you to our store and providing you with a memorable tech shopping experience. Thank you
+                    for
+                    choosing TrendStore.
+                </p>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.1839523710014!2d-73.99041351038443!3d40.75797866103306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25855c6480299%3A0x55194ec5a1ae072e!2sTimes%20Square!5e0!3m2!1ses!2sar!4v1699478251929!5m2!1ses!2sar"
+                    allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </section>
+            <div class="logo">
+                <p class="about-us__logo">trend<span>.</span></p>
+            </div>
+        </main>
 
     </main>
-
     <footer class="footer">
         <div class="container">
             <div class="footer__links">
@@ -49,9 +125,10 @@
             </div>
         </div>
         <div class="copyright">
-            <span>&copy;2023 Todos los derechos reservados.</span>
+            <span>Copyright &copy; 1999-2023 TrendStore S.A.</span>
         </div>
     </footer>
+
 
     <script src="./js/main.js"></script>
 </body>
