--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
     </header>
 
     <main class="main">
-
+        <h1>test</h1>
     </main>
 
     <footer class="footer">
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="copyright">
-            <span>&copy;2023 Todos los derechos reservados.</span>
+            <span>Copyright &copy; 1999-2023 TrendStore S.A.</span>
         </div>
     </footer>
 
