--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
                 <p class="find-us__description">
                     TrendStore is conveniently located in the heart of the city, making it easily accessible to our
                     customers. Our
-                    store is situated at [Address], [City], [Country], and is a tech enthusiast's haven. We've carefully
+                    store is situated at Manhattan, NY 10036, United States, and is a tech enthusiast's haven. We've carefully
                     designed
                     our store to provide a unique shopping experience, allowing you to explore and interact with the
                     latest tech
