--- a/index.html
+++ b/index.html
@@ -36,21 +36,22 @@
         <section class="slider">
             <div class="slider__list">
                 <div class="slider__item">
-                    <img src="./images/gallery/img1.jpg" alt="">
+                    <img src="./images/gallery/img1.jpg" alt="Slider image iPhone 15">
                 </div>
                 <div class="slider__item">
-                    <img src="./images/gallery/img2.jpg" alt="">
+                    <img src="./images/gallery/img2.jpg" alt="Slider image MacBook Pro">
                 </div>
                 <div class="slider__item">
-                    <img src="./images/gallery/img3.jpg" alt="">
+                    <img src="./images/gallery/img3.jpg" alt="Slider image Apple Watch">
                 </div>
                 <div class="slider__item">
-                    <img src="./images/gallery/img4.jpg" alt="">
+                    <img src="./images/gallery/img4.jpg" alt="Slider image iPad Pro">
                 </div>
             </div>
             <div class="slider__buttons">
-                <button id="prev"><</button>
-                <button id="next">></button>
+                <button id="prev">
+                    < </button>
+                        <button id="next">></button>
             </div>
             <ul class="slider__dots">
                 <li class="active"></li>
@@ -59,44 +60,206 @@
                 <li></li>
             </ul>
         </section>
-        <section>
-            <h3>Galeria de Productos</h3>
-            <figure class="hay q hacer 10">
-                <img src="./images/gallery/Imagen4.jpg" alt="Producto">
-                <h4>Nombre del primer Producto</h4>
-                <p>Desc: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, cupiditate?</p>
-                <div>
-                    <button>Agregar</button>
-                    <span>0</span>
-                    <button>quitar</button>
+        <section class="store">
+            <div class="store__guarantee">
+                <div class="item">
+                    <img src="https://http2.mlstatic.com/storage/homes-korriban/assets/images/ecosystem/shipping.svg"
+                        alt="Free Shipping">
+                    <h2>Free Shipping</h2>
+                    <p>We have free worldwide shipping, it usually takes 5-7 business days.</p>
                 </div>
-            </figure>
-        </section>
-        <section>
-            <h3>Galeria de Productos</h3>
-            <figure class="hay q hacer 10">
-                <img src="./images/gallery/Imagen4.jpg" alt="Producto">
-                <h4>Nombre del primer Producto</h4>
-                <p>Desc: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, cupiditate?</p>
-                <div>
-                    <button>Agregar</button>
-                    <span>0</span>
-                    <button>quitar</button>
+                <div class="item">
+                    <img src="https://http2.mlstatic.com/storage/homes-korriban/assets/images/ecosystem/protected.svg"
+                        alt="Security, from start to finish">
+                    <h2>Security, from start to finish</h2>
+                    <p>You do not like? You have 12 months to return it free of charge!</p>
                 </div>
-            </figure>
-        </section>
-        <section>
-            <h3>Galeria de Productos</h3>
-            <figure class="hay q hacer 10">
-                <img src="./images/gallery/Imagen4.jpg" alt="Producto">
-                <h4>Nombre del primer Producto</h4>
-                <p>Desc: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, cupiditate?</p>
-                <div>
-                    <button>Agregar</button>
-                    <span>0</span>
-                    <button>quitar</button>
+                <div class="item">
+                    <img src="https://http2.mlstatic.com/storage/homes-korriban/assets/images/ecosystem/payment.svg"
+                        alt="Every payment methods">
+                    <h2>Every payment methods</h2>
+                    <p>We have all the payment methods you want.</p>
                 </div>
-            </figure>
+            </div>
+            <div class="store__browser">
+                <div class="browser">
+                    <form>
+                        <input type="text" name="browser" id="browser" placeholder="Search...">
+                        <button type="submit"><span class="material-symbols-outlined">search</span></button>
+                    </form>
+                </div>
+                <div class="cart" title="Cart.">
+                    <span class="material-symbols-outlined">shopping_cart</span>
+                    <h2>0</h2>
+                </div>
+            </div>
+            <div class="store__offers">
+                <h2 class="sectionTitle">Offers <a href="#">View all</a></h2>
+                <div class="store__card">
+                    <img src="./images/products/AppleWatchSe.png" alt="Apple Watch Se 2023">
+                    <h4>Apple Watch Se 2023</h4>
+                    <span>$250.00</span>
+                    <p>$200.00 <b>-20%</b></p>
+                    <div class="cardButton">
+                        <button class="button--add">Add</button>
+                        <button class="button--remove">Remove</button>
+                    </div>
+                </div>
+                <div class="store__card">
+                    <img src="./images/products/MacBookAir2022M2.png" alt="MacBook Air 2022 M2">
+                    <h4>MacBook Air 2022 M2</h4>
+                    <span>$1500.00</span>
+                    <p>$1275.00 <b>-15%</b></p>
+                    <div class="cardButton">
+                        <button class="button--add">Add</button>
+                        <button class="button--remove">Remove</button>
+                    </div>
+                </div>
+                <div class="store__card">
+                    <img src="./images/products/iPhone12.jpg" alt="iPhone 12">
+                    <h4>iPhone 12 256GB</h4>
+                    <span>$580.00</span>
+                    <p>$406.00 <b>-30%</b></p>
+                    <div class="cardButton">
+                        <button class="button--add">Add</button>
+                        <button class="button--remove">Remove</button>
+                    </div>
+                </div>
+                <div class="store__card">
+                    <img src="./images/products/AppleAirPodsMax.jpg" alt="Apple AirPods Max">
+                    <h4>Apple Air Pods Max</h4>
+                    <span>$750.00</span>
+                    <p>$637.50 <b>-15%</b></p>
+                    <div class="cardButton">
+                        <button class="button--add">Add</button>
+                        <button class="button--remove">Remove</button>
+                    </div>
+                </div>
+                <div class="store__card">
+                    <img src="./images/products/AppleiPadPro(5ªgeneración).png" alt="Apple iPad Pro (5ªgeneración)">
+                    <h4>Apple iPad Pro (5ªgeneración)</h4>
+                    <span>$1000.00</span>
+                    <p>$1000.00 <b>-30%</b></p>
+                    <div class="cardButton">
+                        <button class="button--add">Add</button>
+                        <button class="button--remove">Remove</button>
+                    </div>
+                </div>
+            </div>
+            <div class="store__products">
+                <h2 class="sectionTitle">Products <a href="#">View all</a></h2>
+                <div class="store__card">
+                    <img src="./images/products/AppleiPadPro2021.png" alt="iPad 11 Pro 2021">
+                    <h4>iPad 11 Pro 2021</h4>
+                    <p>$1000.00</p>
+                    <div class="cardButton">
+                        <button class="button--add">Add</button>
+                        <button class="button--remove">Remove</button>
+                    </div>
+                </div>
+                <div class="store__card">
+                    <img src="./images/products/AppleAirPodsPro(2ndGeneration).png" alt="Apple Air Pods Pro">
+                    <h4>Apple Air Pods Pro(2ndGeneration)</h4>
+                    <p>$1000.00</p>
+                    <div class="cardButton">
+                        <button class="button--add">Add</button>
+                        <button class="button--remove">Remove</button>
+                    </div>
+                </div>
+                <div class="store__card">
+                    <img src="./images/products/iPhone14.png" alt="iPhone 14">
+                    <h4>iPhone 14 256GB</h4>
+                    <p>$1000.00</p>
+                    <div class="cardButton">
+                        <button class="button--add">Add</button>
+                        <button class="button--remove">Remove</button>
+                    </div>
+                </div>
+                <div class="store__card">
+                    <img src="./images/products/MacBookPro2023AppleM2Pro.png" alt="MacBook Pro 2023 Apple M2">
+                    <h4>MacBook Pro 2023 Apple M2</h4>
+                    <p>$1000.00</p>
+                    <div class="cardButton">
+                        <button class="button--add">Add</button>
+                        <button class="button--remove">Remove</button>
+                    </div>
+                </div>
+                <div class="store__card">
+                    <img src="./images/products/iPhone15PM.png" alt="iPhone 15 Pro Max 512GB">
+                    <h4>iPhone 15 Pro Max 512GB</h4>
+                    <p>$1000.00</p>
+                    <div class="cardButton">
+                        <button class="button--add">Add</button>
+                        <button class="button--remove">Remove</button>
+                    </div>
+                </div>
+                <div class="store__card">
+                    <img src="./images/products/AppleTV.png" alt="Apple TV UHD">
+                    <h4>Apple TV UHD</h4>
+                    <p>$1000.00</p>
+                    <div class="cardButton">
+                        <button class="button--add">Add</button>
+                        <button class="button--remove">Remove</button>
+                    </div>
+                </div>
+                <div class="store__card">
+                    <img src="./images/products/AppleWatchSeries9.png" alt="Apple Watch Series 9">
+                    <h4>Apple Watch Series 9</h4>
+                    <p>$1000.00</p>
+                    <div class="cardButton">
+                        <button class="button--add">Add</button>
+                        <button class="button--remove">Remove</button>
+                    </div>
+                </div>
+                <div class="store__card">
+                    <img src="./images/products/Apple2023iMacM3.png" alt="Apple iMac M3 2023">
+                    <h4>Apple iMac M3 2023</h4>
+                    <p>$1000.00</p>
+                    <div class="cardButton">
+                        <button class="button--add">Add</button>
+                        <button class="button--remove">Remove</button>
+                    </div>
+                </div>
+            </div>
+            <!-- <section>
+                <h3>Galeria de Productos</h3>
+                <figure class="hay q hacer 10">
+                    <img src="./images/gallery/Imagen4.jpg" alt="Producto">
+                    <h4>Nombre del primer Producto</h4>
+                    <p>Desc: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, cupiditate?</p>
+                    <div>
+                        <button>Agregar</button>
+                        <span>0</span>
+                        <button>quitar</button>
+                    </div>
+                </figure>
+            </section>
+            <section>
+                <h3>Galeria de Productos</h3>
+                <figure class="hay q hacer 10">
+                    <img src="./images/gallery/Imagen4.jpg" alt="Producto">
+                    <h4>Nombre del primer Producto</h4>
+                    <p>Desc: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, cupiditate?</p>
+                    <div>
+                        <button>Agregar</button>
+                        <span>0</span>
+                        <button>quitar</button>
+                    </div>
+                </figure>
+            </section>
+            <section>
+                <h3>Galeria de Productos</h3>
+                <figure class="hay q hacer 10">
+                    <img src="./images/gallery/Imagen4.jpg" alt="Producto">
+                    <h4>Nombre del primer Producto</h4>
+                    <p>Desc: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, cupiditate?</p>
+                    <div>
+                        <button>Agregar</button>
+                        <span>0</span>
+                        <button>quitar</button>
+                    </div>
+                </figure>
+            </section> -->
         </section>
     </main>
     <footer class="footer">
