--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,58 @@
     </header>
 
     <main class="main">
-        <h1>test</h1>
+        <div class="--empty"></div>
+        <div class="contact">
+            <div class="contact__form">
+                <form>
+                    <div class="form-flex">
+                        <div>
+                            <label for="first-name">First Name *</label>
+                            <input type="text" id="first-name" name="first-name" required>
+                        </div>
+                        <div>
+                            <label for="last-name">Last Name *</label>
+                            <input type="text" id="last-name" name="last-name" required>
+                        </div>
+                    </div>
+                    <label for="number">Phone Number *</label>
+                    <input type="number" id="number" name="number" required>
+
+                    <label for="email">Email *</label>
+                    <input type="email" id="email" name="email" required>
+
+                    <label for="message">Message *</label>
+                    <input type="text" id="message" name="message" required>
+
+                    <label for="additional-details">Additional Details</label>
+                    <textarea id="additional-details" name="additional-details"></textarea>
+
+                    <input type="submit" value="Send Message">
+                </form>
+                <div class="contact__form__info">
+                    <h3>Contact Information</h3>
+                    <br>
+                    <p><span class="material-symbols-outlined">location_on</span> Manhattan, NY 10036, United States</p>
+                    <br>
+                    <p><span class="material-symbols-outlined">call</span> +1 (324) 934-4115</p>
+                    <br>
+                    <p><span class="material-symbols-outlined">mail</span> contact@trendstore.net</p>
+                </div>
+            </div>
+            <div class="contact__help">
+                <h3>How can we help?</h3>
+                <p>Our team is here to answer your questions, provide assistance, and offer you the best shopping
+                    experience. Contact us
+                    today!</p>
+                <h4>Trusted By.</h4>
+                <div class="container">
+                    <div class="container__item"><img src="./images/companies-logos/apple.png" alt="Apple Logo Png"></div>
+                    <div class="container__item"><img src="./images/companies-logos/mercedes.png" alt="Mercedes Logo Png"></div>
+                    <div class="container__item"><img src="./images/companies-logos/nike.png" alt="Nike Logo Png"></div>
+                    <div class="container__item"><img src="./images/companies-logos/tesla.png" alt="Tesla Logo Png"></div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
