--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
                         <button type="submit"><span class="material-symbols-outlined">search</span></button>
                     </form>
                 </div>
-                <div class="cart" title="Cart.">
+                <div class="cart" title="Cart">
                     <span class="material-symbols-outlined">shopping_cart</span>
                     <h2>0</h2>
                 </div>
             </div>
             <div class="store__offers">
-                <h2 class="sectionTitle">Offers <a href="#">View all</a></h2>
+                <h2 class="section__title">Offers <a href="#">View all</a></h2>
                 <div class="store__card">
                     <img src="./images/products/AppleWatchSe.png" alt="Apple Watch Se 2023">
                     <h4>Apple Watch Se 2023</h4>
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="store__card">
-                    <img src="./images/products/iPhone12.jpg" alt="iPhone 12">
+                    <img src="./images/products/iPhone12.jpg" alt="iPhone 12 256GB">
                     <h4>iPhone 12 256GB</h4>
                     <span>$580.00</span>
                     <p>$406.00 <b>-30%</b></p>
@@ -126,8 +126,8 @@
                     </div>
                 </div>
                 <div class="store__card">
-                    <img src="./images/products/AppleAirPodsMax.jpg" alt="Apple AirPods Max">
-                    <h4>Apple Air Pods Max</h4>
+                    <img src="./images/products/AppleAirPodsMax.jpg" alt="Air Pods Max">
+                    <h4>Air Pods Max</h4>
                     <span>$750.00</span>
                     <p>$637.50 <b>-15%</b></p>
                     <div class="cardButton">
@@ -136,8 +136,8 @@
                     </div>
                 </div>
                 <div class="store__card">
-                    <img src="./images/products/AppleiPadPro(5ªgeneración).png" alt="Apple iPad Pro (5ªgeneración)">
-                    <h4>Apple iPad Pro (5ªgeneración)</h4>
+                    <img src="./images/products/AppleiPadPro(5ªgeneración).png" alt="iPad Pro 2023">
+                    <h4>iPad Pro 2023</h4>
                     <span>$1000.00</span>
                     <p>$1000.00 <b>-30%</b></p>
                     <div class="cardButton">
@@ -147,7 +147,7 @@
                 </div>
             </div>
             <div class="store__products">
-                <h2 class="sectionTitle">Products <a href="#">View all</a></h2>
+                <h2 class="section__title">Products <a href="#">View all</a></h2>
                 <div class="store__card">
                     <img src="./images/products/AppleiPadPro2021.png" alt="iPad 11 Pro 2021">
                     <h4>iPad 11 Pro 2021</h4>
@@ -158,8 +158,8 @@
                     </div>
                 </div>
                 <div class="store__card">
-                    <img src="./images/products/AppleAirPodsPro(2ndGeneration).png" alt="Apple Air Pods Pro">
-                    <h4>Apple Air Pods Pro(2ndGeneration)</h4>
+                    <img src="./images/products/AppleAirPodsPro(2ndGeneration).png" alt="Air Pods Pro (2nd Generation)">
+                    <h4>Air Pods Pro (2nd Generation)</h4>
                     <p>$1000.00</p>
                     <div class="cardButton">
                         <button class="button--add">Add</button>
@@ -167,7 +167,7 @@
                     </div>
                 </div>
                 <div class="store__card">
-                    <img src="./images/products/iPhone14.png" alt="iPhone 14">
+                    <img src="./images/products/iPhone14.png" alt="iPhone 14 256GB">
                     <h4>iPhone 14 256GB</h4>
                     <p>$1000.00</p>
                     <div class="cardButton">
@@ -176,8 +176,8 @@
                     </div>
                 </div>
                 <div class="store__card">
-                    <img src="./images/products/MacBookPro2023AppleM2Pro.png" alt="MacBook Pro 2023 Apple M2">
-                    <h4>MacBook Pro 2023 Apple M2</h4>
+                    <img src="./images/products/MacBookPro2023AppleM2Pro.png" alt="MacBook Pro 2023 M2">
+                    <h4>MacBook Pro 2023 M2</h4>
                     <p>$1000.00</p>
                     <div class="cardButton">
                         <button class="button--add">Add</button>
@@ -212,8 +212,8 @@
                     </div>
                 </div>
                 <div class="store__card">
-                    <img src="./images/products/Apple2023iMacM3.png" alt="Apple iMac M3 2023">
-                    <h4>Apple iMac M3 2023</h4>
+                    <img src="./images/products/Apple2023iMacM3.png" alt="iMac M3 2023">
+                    <h4>iMac M3 2023</h4>
                     <p>$1000.00</p>
                     <div class="cardButton">
                         <button class="button--add">Add</button>
@@ -221,45 +221,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <section>
-                <h3>Galeria de Productos</h3>
-                <figure class="hay q hacer 10">
-                    <img src="./images/gallery/Imagen4.jpg" alt="Producto">
-                    <h4>Nombre del primer Producto</h4>
-                    <p>Desc: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, cupiditate?</p>
-                    <div>
-                        <button>Agregar</button>
-                        <span>0</span>
-                        <button>quitar</button>
-                    </div>
-                </figure>
-            </section>
-            <section>
-                <h3>Galeria de Productos</h3>
-                <figure class="hay q hacer 10">
-                    <img src="./images/gallery/Imagen4.jpg" alt="Producto">
-                    <h4>Nombre del primer Producto</h4>
-                    <p>Desc: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, cupiditate?</p>
-                    <div>
-                        <button>Agregar</button>
-                        <span>0</span>
-                        <button>quitar</button>
-                    </div>
-                </figure>
-            </section>
-            <section>
-                <h3>Galeria de Productos</h3>
-                <figure class="hay q hacer 10">
-                    <img src="./images/gallery/Imagen4.jpg" alt="Producto">
-                    <h4>Nombre del primer Producto</h4>
-                    <p>Desc: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, cupiditate?</p>
-                    <div>
-                        <button>Agregar</button>
-                        <span>0</span>
-                        <button>quitar</button>
-                    </div>
-                </figure>
-            </section> -->
         </section>
     </main>
     <footer class="footer">
