--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="es-AR">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Valentin Tarnovsky" />
+    <meta name="author" content="Valentin Tarnovsky">
     <meta name="description" content="Integrative Project I, Education IT. E-Commerce of technological products.">
     <meta name="keywords"
         content="Tecnología, Gadgets, Electrónica, Dispositivos, Computadoras, Móviles, Accesorios tecnológicos, Innovación, Compras en línea, Tienda de electrónica, Ofertas tecnológicas, Electrónica de consumo, Audio y video, Smartphones, Tablets, Portátiles, Cámaras, Auriculares, Gaming, Componentes informáticos, Smartwatches, Domótica, Energía renovable, Realidad virtual, Impresoras, Drones, Redes y conectividad, Seguridad tecnológica, E-commerce de tecnología, Envío rápido">
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" >
     <link rel="stylesheet" href="./css/icomoon.css">
 
     <title>TrendStore | About Us</title>
@@ -33,7 +33,7 @@
 
     <main class="main">
         <div class="--empty"></div>
-        <main class="main">
+        <div class="main">
             <section class="about-us">
                 <h2 class="about-us__title">About Us<span>.</span></h2>
                 <p class="about-us__description">
@@ -108,7 +108,7 @@
             <div class="logo">
                 <p class="about-us__logo">trend<span>.</span></p>
             </div>
-        </main>
+        </div>
 
     </main>
     <footer class="footer">
